--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Models\AchRaretyStats.cs" />
     <Compile Include="Models\BattleNetSc2Ach.cs" />
     <Compile Include="Models\BattleNetSc2Profil.cs" />
+    <Compile Include="Models\ExophaseScheachResult.cs" />
     <Compile Include="Models\GameStats.cs" />
     <Compile Include="Models\ListAchievements.cs" />
     <Compile Include="Models\ListGames.cs" />
