--- a/source/packages.config
+++ b/source/packages.config
@@ -7,5 +7,6 @@
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net462" />
   <package id="SteamKit2" version="1.8.3" targetFramework="net462" />
   <package id="System.IO.Abstractions" version="2.1.0.227" targetFramework="net462" />
+  <package id="VirtualizingWrapPanel" version="1.5.4" targetFramework="net462" />
   <package id="YamlDotNet" version="5.4.0" targetFramework="net462" />
 </packages>
