--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -30,7 +30,7 @@ Packages:
     ReleaseDate: 2021-09-30
     PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.2/playnite-successstory-plugin_2_2.pext
     Changelog:
-      - Playnite 9 beta version (not compatible with Playnite 8)
+      - Playnite 9 (not compatible with Playnite 8)
       - UI tweaks
       - Fixed many bugs
       - Improve performances and code optimizations (thanks to Jeshibu)
