--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -45,3 +45,12 @@ Packages:
       - UI tweaks
       - Fixed many bugs
       - Fixed PSN trophies
+  - Version: 2.2.2
+    RequiredApiVersion: 6.1.0
+    ReleaseDate: 2021-10-15
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.2.2/playnite-successstory-plugin_2_2_2.pext
+    Changelog:
+      - UI tweaks
+      - Optimizations for images caching
+      - Fixed many bugs
+      - Fixed PSN trophies
