Add Epic achievements #121

--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clients\BattleNetAchievements.cs" />
+    <Compile Include="Clients\EpicAchievements.cs" />
     <Compile Include="Clients\ExophaseAchievements.cs" />
     <Compile Include="Clients\GenericAchievements.cs" />
     <Compile Include="Clients\GogAchievements.cs" />
@@ -157,6 +158,9 @@
     <Compile Include="Models\AchRaretyStats.cs" />
     <Compile Include="Models\BattleNetSc2Ach.cs" />
     <Compile Include="Models\BattleNetSc2Profil.cs" />
+    <Compile Include="Models\EpicAchievementsData.cs" />
+    <Compile Include="Models\EpicAchievementsOwnedData.cs" />
+    <Compile Include="Models\EpicData.cs" />
     <Compile Include="Models\ExophaseSearchResult.cs" />
     <Compile Include="Models\GameStats.cs" />
     <Compile Include="Models\ListAchievements.cs" />
