--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -104,3 +104,9 @@ Packages:
       - Added World of Warcraft achievements
       - Updated localizations
       - Fixed many bugs
+  - Version: 2.6.1
+    RequiredApiVersion: 6.2.0
+    ReleaseDate: 2021-12-01
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.6.1/playnite-successstory-plugin_2_6_1.pext
+    Changelog:
+      - Fixed minors bugs
