--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -116,3 +116,12 @@ Packages:
     PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.6.2/playnite-successstory-plugin_2_6_2.pext
     Changelog:
       - Comed back on a modification that blocks the download in an infinite time
+  - Version: 2.7
+    RequiredApiVersion: 6.2.0
+    ReleaseDate: 2021-12-10
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.7/playnite-successstory-plugin_2_7.pext
+    Changelog:
+      - Added QuickSearch support
+      - Updated localizations
+      - Minors UI optimizations
+      - Fixed many bugs
