updated manifest & version

--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -125,3 +125,13 @@ Packages:
       - Updated localizations
       - Minors UI optimizations
       - Fixed many bugs
+  - Version: 2.8
+    RequiredApiVersion: 6.2.0
+    ReleaseDate: 2021-12-31
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.8/playnite-successstory-plugin_2_8.pext
+    Changelog:
+      - Updated localizations
+      - UI tweaks
+      - Added filters options for each type of plugin control
+      - Many minor improvements
+      - Fixed many bugs
