--- a/source/packages.config
+++ b/source/packages.config
@@ -3,10 +3,12 @@
   <package id="AngleSharp" version="0.9.9" targetFramework="net462" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net462" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net462" />
+  <package id="morelinq" version="3.3.2" targetFramework="net462" />
   <package id="PlayniteSDK" version="6.2.1" targetFramework="net462" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net462" />
   <package id="SteamKit2" version="1.8.3" targetFramework="net462" />
   <package id="System.IO.Abstractions" version="2.1.0.227" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
   <package id="VirtualizingWrapPanel" version="1.5.4" targetFramework="net462" />
   <package id="YamlDotNet" version="5.4.0" targetFramework="net462" />
 </packages>
