add check hash for nds

--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -229,6 +229,7 @@
     <Compile Include="playnite-plugincommon\CommonPluginsControls\Views\OptionsDownloadData.xaml.cs">
       <DependentUpon>OptionsDownloadData.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\NDS.cs" />
     <Compile Include="Services\OldToNew.cs" />
     <Compile Include="Services\SuccessStoryDatabase.cs" />
     <Compile Include="SuccessStory.cs" />
