updated manifest & version

--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -182,3 +182,14 @@ Packages:
       - Added new options in plugin settings to hide chart in plugin main view
       - Added QuickSearch info in plugin settings
       - Added new filtes in plugin main view
+  - Version: 2.11
+    RequiredApiVersion: 6.2.2
+    ReleaseDate: 2022-03-21
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.11/playnite-successstory-plugin_2_11.pext
+    Changelog:
+      - Updated localizations
+      - Fixed minors bugs
+      - UI tweaks
+      - Added Guild Wars 2 achievements
+      - Existing data retained when no realization is found
+      - Limit RetroAchievements for supported console
