--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -208,7 +208,7 @@ Packages:
   - Version: 2.12.1
     RequiredApiVersion: 6.2.2
     ReleaseDate: 2022-07-19
-    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.12.1/playnite-successstory-plugin_2_12.1.pext
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.12.1/playnite-successstory-plugin_2_12_1.pext
     Changelog:
       - Updated localizations
       - UI tweaks
