--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -225,3 +225,11 @@ Packages:
     PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v2.12.2/playnite-successstory-plugin_2_12_2.pext
     Changelog:
       - Fixed minor issues with Epic url encoding (thanks to Jhanlon95)
+  - Version: 3.0
+    RequiredApiVersion: 6.4.0
+    ReleaseDate: 2022-09-23
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v3.0/playnite-successstory-plugin_3_0.pext
+    Changelog:
+      - Playnite 10 only
+      - Updated localizations
+      - Fixed minor issues
