--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -73,6 +73,7 @@
     </Reference>
     <Reference Include="Playnite.SDK, Version=6.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\PlayniteSDK.6.7.0\lib\net462\Playnite.SDK.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
