added support for PlayniteSearch & fixed issue with QuickSearch

--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -238,6 +238,7 @@
     </Compile>
     <Compile Include="Services\NDS.cs" />
     <Compile Include="Services\SuccessStoryDatabase.cs" />
+    <Compile Include="Services\SuccessStorySearch.cs" />
     <Compile Include="SuccessStory.cs" />
     <Compile Include="SuccessStorySettings.cs" />
     <Compile Include="Views\Interfaces\OverwatchCareerStats.xaml.cs">
