--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -267,3 +267,11 @@ Packages:
       - Fixed bad parsing of trophy earned for PSN (thanks to Damir Arh)
       - Updated Genshin Impact Achievement Icons (thanks to Covkie)
       - Fixed minor issues and crash
+  - Version: 3.1.3
+    RequiredApiVersion: 6.9.0
+    ReleaseDate: 2023-07-24
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v3.1.3/playnite-successstory-plugin_3_1_3.pext
+    Changelog:
+      - Updated localizations
+      - Disabled RetroAchievements
+      - Fixed minor issues and crash
